@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tk.h,v 1.64 2002/06/22 00:02:49 dkf Exp $
+ * RCS: @(#) $Id: tk.h,v 1.65 2002/07/14 17:29:57 dgp Exp $
  */
 
 #ifndef _TK
@@ -48,10 +48,10 @@ extern "C" {
 #define TK_MAJOR_VERSION   8
 #define TK_MINOR_VERSION   4
 #define TK_RELEASE_LEVEL   TCL_BETA_RELEASE
-#define TK_RELEASE_SERIAL  1
+#define TK_RELEASE_SERIAL  2
 
 #define TK_VERSION	"8.4"
-#define TK_PATCH_LEVEL	"8.4b1"
+#define TK_PATCH_LEVEL	"8.4b2"
 
 /*
  * The following definitions set up the proper options for Macintosh
